# h33-cli-rs

./: Cargo.toml  README.md  detection-rules.yaml
.github/workflows/: release.yml
src/: client.rs  config.rs  main.rs  output.rs
src/commands/: audit.rs  bitcoin.rs  detect.rs  doctor.rs  domains.rs  health.rs  init.rs  mcp.rs  mint.rs  mod.rs  prove.rs  scan.rs  signup.rs  status.rs  upgrade.rs  verify.rs  wrap.rs
